# roscon25-workshop

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pixi.toml  pyproject.toml
.docker/: Dockerfile
.github/workflows/: ci.yml
pyrobosim_ros_gym/: eval.py  param_optim.py  pyrobosim_ros_env.py  start_world.py  test_world.yaml  train.py
pyrobosim_ros_gym/config/: banana_env_config.yaml  greenhouse_env_config.yaml
pyrobosim_ros_gym/envs/: __init__.py  banana.py  greenhouse.py  pyrobosim_ros_env.py
rl_ws_worlds/: package.xml  setup.cfg  setup.py
rl_ws_worlds/rl_ws_worlds/: run.py
rl_ws_worlds/worlds/: banana.yaml  greenhouse.yaml  greenhouse_object_data.yaml  location_data.yaml  object_data.yaml  world1.yaml
slides/: main.md
test/: test_doc.py
