[project]
name = "roscon2025"
authors = [
  {name = "Sebastian Castro", email = "sebas.a.castro@gmail.com"},
  {name = "Christian Henkel", email = "christian.henkel2@de.bosch.com"},
]
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = ["astar>=0.99,<0.100"]

[tool.pixi.workspace]
channels = ["robostack-kilted", "conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.12, <3.13"
colcon-common-extensions = ">=0.3.0,<0.4"
pre-commit = ">=4.2.0,<5"
rich = ">=14.1.0,<15"
ros-kilted-ros-core = ">=0.12.0,<0.13"
stable-baselines3 = ">=2.6.0,<3"
setuptools = ">=78.1.1,<80.0.0"
scipy = ">=1.16.0,<2"
transforms3d = ">=0.4.2,<0.5"
adjusttext = ">=1.3.0,<2"
matplotlib = ">=3.10.5,<4"
numpy = ">=1.26.4,<2"
pycollada = ">=0.9.2,<0.10"
pyside6 = ">=6.4.0"
pyyaml = ">=6.0.2,<7"
shapely = ">=2.0.1"
trimesh = ">=4.7.1,<5"
tqdm = ">=4.67.1,<5"
tensorboard = "*"
optuna = ">=4.5.0,<5"
optuna-dashboard = ">=0.19.0,<0.20"

[tool.pixi.tasks]
build = "colcon build --symlink-install"
lint = "pre-commit run -a"
zenoh = "ros2 run rmw_zenoh_cpp rmw_zenohd"
pyrobosim_demo = "ros2 launch pyrobosim_ros demo.launch.py"
start_world = "python pyrobosim_ros_gym/start_world.py"
train = "python pyrobosim_ros_gym/train.py"
eval = "python pyrobosim_ros_gym/eval.py"
tensorboard = "tensorboard --logdir ./train_logs/"

[tool.pixi.activation]
scripts = ["install/setup.sh"]
